--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-google-places-autocomplete": "^2.4.1",
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
+    "react-redux": "^7.2.6",
     "tslib": "^2.3.1"
   },
   "devDependencies": {
