--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "tslib": "^2.3.1"
+    "firebase": "8.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
