--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/stack": "^6.1.0",
     "expo": "^44.0.0",
+    "firebase": "8.2.3",
+    "lottie-react-native": "^5.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -14,8 +16,7 @@
     "react-native-vector-icons": "^9.0.0",
     "react-native-web": "0.17.1",
     "react-redux": "^7.2.6",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "firebase": "8.2.3"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
